[package]
name = "db"
version = "0.1.0"
authors = ["Kalita Alexey <kalita.alexey@outlook.com>"]
build = "build.rs"

[build-dependencies]
syntex = "0.30.0"
diesel_codegen = { version = "0.5.0", default-features = false, features = ["with-syntex", "sqlite"] }

[dependencies]
diesel = { version = "0.5.0", features = ["sqlite"] }
